Add API call to retrieve features for all stored objects by table name
Former-commit-id: b96d9b4c480acd2a32b8c2b23932246e1e2a4d2f
