# docs/openapi.json
@@ -567,6 +567,35 @@
         }
       }
     },
+    "/api/v1/find/feature/all/by/tablename/{category}" : {
+      "get" : {
+        "tags" : [ "Metadata" ],
+        "summary" : "Find features for the given table name",
+        "description" : "Find all features for the given table name for all indexed objects",
+        "operationId" : "findAllFeatByTableName",
+        "parameters" : [ {
+          "name" : "category",
+          "in" : "path",
+          "description" : "The table name to find features for all objects for",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/AllFeaturesByTableNameQueryResult"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/find/feature/text/by/{id}/{category}" : {
       "get" : {
         "tags" : [ "Metadata" ],
@@ -1205,11 +1234,11 @@
             "type" : "number",
             "format" : "float"
           },
-          "sequenceNumber" : {
+          "count" : {
             "type" : "integer",
             "format" : "int32"
           },
-          "count" : {
+          "sequenceNumber" : {
             "type" : "integer",
             "format" : "int32"
           }
@@ -1450,6 +1479,26 @@
                 "additionalProperties" : {
                   "type" : "object"
                 }
+              }
+            }
+          },
+          "elementID" : {
+            "type" : "string"
+          }
+        }
+      },
+      "AllFeaturesByTableNameQueryResult" : {
+        "type" : "object",
+        "properties" : {
+          "queryId" : {
+            "type" : "string"
+          },
+          "featureMap" : {
+            "type" : "array",
+            "items" : {
+              "type" : "object",
+              "additionalProperties" : {
+                "type" : "object"
               }
             }
           },
